# What-If

./: .gitignore  README.md  pyproject.toml  test_rocketride.py
agents/: test_captioner.py
agents/_lib/: gemini.py  gmi.py  ids.py  storage.py  trace.py  veo.py
agents/captioner/: agent.py
agents/commentary/: agent.py
agents/director/: agent.py  prompt_builder.py  schema.py  test_prompt_contract.py
agents/ingest/: agent.py  chunk_indexer.py  ffmpeg_pipeline.py  frame_ring.py  test_smoke.py  youtube_resolver.py
agents/retrieval/: agent.py
agents/setup/: agent.py
agents/summariser/: agent.py
agents/validator/: agent.py
agents/videogen/: agent.py
docs/: 00_MASTER_HEADER.md  01_VISION.md  02_ARCHITECTURE.md  03_DATA_MODEL.md  04_PIPELINE.md  05_AGENTS.md  06_TECH_GMI_CLOUD.md  07_TECH_ROCKETRIDE.md  08_TECH_GEMINI_VEO.md  09_USER_FLOWS.md  10_PROVENANCE.md  11_FRONTEND.md  12_SHARING.md  13_INFRA.md  14_REPO_LAYOUT.md  15_BUILD_TEAM_TASKS.md  16_INGEST_TECHNICAL.md  BUILD_PLAN.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ClipTray.tsx  Commentary.tsx  MatchHeader.tsx  TimelineScrubber.tsx  WhatIfComposer.tsx
frontend/lib/: api.ts  store.ts  types.ts  ws.ts  youtube.ts
pipelines/: new-pipeline.pipe  perception.pipe  whatif-director.pipe
prompts/: captioner.system.md  commentary.persona.md  director.system.md  director.veo_schema.md  retrieval.rerank.md  setup.match_meta.md  summariser.system.md  validator.continuity.md  validator.fidelity.md
schemas/: ws.py
schemas/domain/: __init__.py
services/gateway/: main.py  (+4 more)
(+5 files in other folders)
